--- a/demo/basic/index.html
+++ b/demo/basic/index.html
@@ -10,7 +10,7 @@
         <button ng-click="testing('hi')">Say Hi!</button>
     </div>
     <script src="../libs/angular/angular.js"></script>
-    <script src="../infinite-grid/infinite-grid.js"></script>
+    <script src="../infinite-grid/infinite-grid-0.0.0.js"></script>
     <script>
         (function () {
             angular.module("app", ["infiniteGrid"])
