Small fix in the directive

--- a/demo/basic/index.html
+++ b/demo/basic/index.html
@@ -38,8 +38,7 @@
          columns="10"
          totalColumns="totalColumns"
          rows="5"
-         totalRows="totalRows"
-         data="data">
+         totalRows="totalRows">
     </infinite-grid>
 
     <script src="../libs/angular/angular.js"></script>
